Styles System => Stable UWP and Android A UWP project compatible with Shell was added
Remarks:
To display the Custom Icon Font in the "Flyout sector" in UWP you must add the Size and Color properties in Icons.xaml, unfortunately in the "Tabs sector" that logic does not work, that problem must be solved.
In UWP the FontIcons and fonts were added in the "Assets / Fonts" folder, as for the images a good practice is to add them in the root of the UWP project. The FlyoutBackgroundImage property does not work in UWP so I added the image in the FlyoutHeaderTemplate but it is only visible to UWP.

--- a/XF_FoodApp/XF_FoodApp/AppShell.xaml
+++ b/XF_FoodApp/XF_FoodApp/AppShell.xaml
@@ -8,6 +8,7 @@
     xmlns:ShellTemplate="clr-namespace:XF_FoodApp.Views.ShellTemplates"
     xmlns:view="clr-namespace:XF_FoodApp.Views"
     xmlns:FontAwesome="clr-namespace:XF_FoodApp.Styles;assembly=XF_FoodApp"
+    xmlns:ImageExtension="clr-namespace:XF_FoodApp.Extensions"
     Title="Delicious Food"
     FlyoutBackgroundImage="img_bgflyout.png"
     FlyoutBackgroundImageAspect="AspectFill"
@@ -36,7 +37,8 @@
         <Color x:Key="NavigationPrimary">#FF9A196B</Color>
         <Style
             x:Key="BaseStyle"
-            TargetType="Element">
+            TargetType="Element"
+            ApplyToDerivedTypes="True">
             <!--  In iOS, this property changes the color of the FlyoutIcon and the selected top tabs  -->
             <Setter Property="Shell.ForegroundColor" Value="{DynamicResource colQua}" />
             <!--  In iOS this property changes the color tabs upper not selected  -->
