--- a/XF_FoodApp/XF_FoodApp/Views/ShellTemplates/FlyoutHeaderTemplate.xaml
+++ b/XF_FoodApp/XF_FoodApp/Views/ShellTemplates/FlyoutHeaderTemplate.xaml
@@ -6,8 +6,8 @@
     xmlns:d="http://xamarin.com/schemas/2014/forms/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Padding="16,39,16,10"
+    HeightRequest="100"
     mc:Ignorable="d">
-
 
     <Grid.ColumnDefinitions>
         <ColumnDefinition Width="50" />
@@ -19,6 +19,24 @@
         <RowDefinition Height="Auto" />
     </Grid.RowDefinitions>
 
+    <Image
+        Grid.RowSpan="2"
+        Grid.ColumnSpan="2"
+        Margin="-16,-39,-16,-10"
+        Source="img_bgflyout.png"
+        Aspect="AspectFill">
+        <Image.IsVisible>
+            <OnPlatform x:TypeArguments="x:Boolean">
+                <On
+                    Platform="Android, iOS"
+                    Value="False" />
+                <On
+                    Platform="UWP"
+                    Value="True" />
+            </OnPlatform>
+        </Image.IsVisible>
+    </Image>
+
     <Frame
         Grid.Row="0"
         Grid.Column="0"
@@ -28,12 +46,12 @@
         Visual="Material"
         HorizontalOptions="Start">
         <Image
+            Source="img_profile.png"
             HeightRequest="50"
             WidthRequest="50"
             VerticalOptions="Center"
             HorizontalOptions="Start"
-            Aspect="AspectFill"
-            Source="img_profile.png" />
+            Aspect="AspectFill" />
     </Frame>
 
 
